<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_cat"
            android:icon="@drawable/list"
            android:title="@string/menu_cat" />
        <item
            android:id="@+id/nav_med"
            android:icon="@drawable/insured"
            android:title="@string/menu_medi_policy" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/clock"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_About" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
