<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <TextView android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:fontFamily="@font/liberationserifbold"
        android:text="@string/password_reset"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000" />

    <TextView android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/rubik_light"
        android:padding="10dp"
        android:textColor="#000"
        android:text="@string/pwd_reset_instruction" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="05dp"
                android:background="@color/colorAccent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/colorMenu"
                android:textColorHint="@color/colorMenu"
                 />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/liberationserifbold"
            android:background="@color/colorPrimary"
            android:text="@string/reset_password"
            android:textColor="#000" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/liberationserifbold"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="#000" />
    </LinearLayout>

</LinearLayout>